--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "imagenes",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "dependencies": {
     "ejs": "^3.1.6",
@@ -14,14 +15,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ejricciardi/SubirImagenes.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ejricciardi/SubirImagenes/issues"
-  },
-  "homepage": "https://github.com/ejricciardi/SubirImagenes#readme",
-  "description": ""
+  "license": "ISC"
 }
